// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates correct metadata for: dynamic route 1`] = `
{
  "description": "View transaction 0x12345 on Blockscout (Blockscout) Explorer",
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Blockscout transaction 0x12345 | Blockscout",
  },
  "title": "Blockscout transaction 0x12345 | Blockscout",
}
`;

exports[`generates correct metadata for: dynamic route with API data 1`] = `
{
  "description": "0x12345, balances and analytics on the Blockscout (Blockscout) Explorer",
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Blockscout USDT token details | Blockscout",
  },
  "title": "Blockscout USDT token details | Blockscout",
}
`;

exports[`generates correct metadata for: static route 1`] = `
{
  "description": "",
  "opengraph": {
    "description": "",
    "imageUrl": "http://localhost:3000/static/og_placeholder.png",
    "title": "Blockscout blocks | Blockscout",
  },
  "title": "Blockscout blocks | Blockscout",
}
`;
